# aois

lab1/: .coverage  .gitignore  constants.py  main.py
lab1/src/: bcd5421.py  ieee7542008.py  integercalculator.py
lab1/tests/: test_bcd_5421.py  test_ieee7542008.py  test_integer.py
lab2/: .gitignore  Analyser.py  CalculationMinimizer.py  CalculationTabularMinimizer.py  CanonicalFormsBuilder.py  D.py  FictiveVariablesFinder.py  KarnaughMinimizer.py  Minimization.py  PostAnalyser.py  TruthTableBuilder.py  ZhegalkinBuilder.py  analyser.py  main.py
lab2/src/: CalculationMinimizer.py  CalculationTabularMinimizer.py  CanonicalFormsBuilder.py  DerivativeAnalyzer.py  FictiveVariablesFinder.py  KarnaughMinimizer.py  PostAnalyser.py  TruthTable.py  TruthTableBuilder.py  Validator.py  ZhegalkinBuilder.py
lab2/tests/: test_calculation_minimizer.py  test_calculation_tabular_minimizer.py  test_canonical_forms_builder.py  test_derivative_analyzer.py  test_fictive_variables.py  test_karnaugh_minimizer.py  test_post_analyzer.py  test_truth_table_builder.py  test_validator.py  test_zhegalkin_builder.py
lab3/: .gitignore  task1.circ  task2.circ  task3.circ
lab4/: .gitignore  main.py  pyproject.toml
lab4/src/: HashTable.py  HashTableNode.py  constants.py
lab4/tests/: test_h.py  test_hash_table.py
